# PaddleAPITest

./: .pre-commit-config.yaml  README.md  engine.py  engineV2-README.md  engineV2.py  engineV3.py  pyproject.toml
.github/workflows/: ci-static-checks.yml
report/ci_ce_gpu/: test_code.py
test_pipline/CINN/: README_test_cinn.md  run_cinn.sh
tester/: __init__.py  accuracy.py  accuracy_stable.py  base.py  base_config.yaml  paddle_cinn_vs_dygraph.py  paddle_device_vs_cpu.py  paddle_device_vs_gpu.py  paddle_gpu_performance.py  paddle_only.py  paddle_torch_gpu_performance.py  torch_gpu_performance.py
tester/api_config/: __init__.py  bittensor_config_filter.py  config_analyzer.py  get_error_api.py  log_writer.py  performance_numel_stat.py  performance_numel_stat2.py  to_0_size_config.py  to_big_size_config.py  to_big_size_sample_config.py  to_prof_size_config.py
tester/paddle_to_torch/: __init__.py  converter.py  mapping.json  rules.py
tools/: accuracy_demo.py  find_API_config.py  get_api_set.py  get_cases_from_csv.py  get_config_set.py  get_diff_config_set.py  log_digest.py  move_config.py  normalize_origin_api_config.py  performance_demo.py  prof_api_gsb.py  remove_case_by_api.py  remove_configs.py  retest_remover.py  retrieve_configs.py  skip_seeker.py  test_signature.py  test_tool.py
tools/api_tracer/: api_alias_tool.py  api_map_tool.py  api_merge_tool.py  api_tracer.py  config_serializer.py  framework_dialect.py  test_infer.py  test_module.py  test_op.py  test_train.py
tools/error_stat/: csv_stat_stable.py  csv_stat_tol.py  error_stat.py  error_summary.py
(+108 files in other folders)
